# computer-club

./: CMakeLists.txt  README.md
src/: funcs_for_id.cpp  funcs_for_id.h  funcs_for_time.cpp  funcs_for_time.h  main.cpp  types.h  validation.cpp  validation.h
test_files/: report_file_1.txt  report_file_11.txt  report_file_12.txt  report_file_13.txt  report_file_14.txt  report_file_15.txt  report_file_16.txt  report_file_2.txt  report_file_3.txt  report_file_4.txt  report_file_5.txt  report_file_6.txt  report_file_7.txt  report_file_8.txt
